--- a/index.html
+++ b/index.html
@@ -11,11 +11,38 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Document</title>
+    <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <script src="src/app.js"></script>
+    <div class="container">
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img src="" alt="Clear" />
+            12 °С | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 75%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a
+            href="https://github.com/Nika-L/Vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >, by Nika Leva
+        </small>
+      </div>
+      <script src="src/app.js"></script>
+    </div>
   </body>
 </html>
