--- a/index.html
+++ b/index.html
@@ -16,22 +16,31 @@
   <body>
     <div class="container">
       <div class="weather-app-wrapper">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img src="" alt="Clear" />
-            12 °С | °F
-          </div>
-          <div class="col-6">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 75%</li>
-              <li>Wind: 2 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="weather-temperature">
+                <img src="img/partly_cloudy.png" alt="Clear" />
+                <strong>12</strong>
+                <span class="units"
+                  >°С |<a href="#" class="fahrenhight"> °F</a>
+                </span>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 75%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
         <small>
