--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="row">
             <div class="col-6">
               <div class="weather-temperature">
-                <img src="img/partly_cloudy.png" alt="Clear" />
+                <img src="" alt="Clear" id="icon"/>
                 <strong id="temperature"></strong>
                 <span class="units"
                   >°С |<a href="#" class="fahrenhight"> °F</a>
