Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="" alt="Clear" id="icon"/>
                 <strong id="temperature"></strong>
                 <span class="units"
-                  >°С |<a href="#" class="fahrenhight"> °F</a>
+                  ><a href="#" class="active" id="celcius-link">°С</a> |<a href="#" class="fahrenhight" id="fahrenhight-link"> °F</a>
                 </span>
               </div>
             </div>
