--- a/index.html
+++ b/index.html
@@ -56,7 +56,19 @@
               </ul>
             </div>
           </div>
-        </div>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Thuesday</div> 
+                  <img src="http://openweathermap.org/img/wn/04d@2x.png" alt="" width="40">
+                  <div class="weather-forecast-temperature">
+                    <span class="weather-forecast-temperature-max">18°</span>
+                    <span class="weather-forecast-temperature-min">12°</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         <small>
           <a
             href="https://github.com/Nika-L/Vanilla-weather-app"
