--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       crossorigin="anonymous"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -23,12 +26,12 @@
               <div class="col-9">
               <input type="search"
               placeholder="Type a city..."
-              class="form-control"
+              class="form-control style-form-control"
               id="city-input"
               autocomplete="off">
             </div>
               <div class="col-3">
-              <input type="submit" value="Search" class="btn btn-primary w-100">
+              <input type="submit" value="Search" class="btn btn-primary w-100 button-submit">
                  </div>  
             </div>
           </form>
@@ -45,8 +48,7 @@
                 <img src="" alt="Clear" id="icon"/>
                 <strong id="temperature"></strong>
                 <span class="units"
-                  ><a href="#" class="active" id="celcius-link">°С</a> |<a href="#" class="fahrenhight" id="fahrenhight-link"> °F</a>
-                </span>
+                  >°С</span>
               </div>
             </div>
             <div class="col-6">
@@ -59,14 +61,15 @@
           <div class="weather-forecast" id="forecast">
             
           </div> 
-        <small>
+           </div>
+        <small class="footer-style">
           <a
             href="https://github.com/Nika-L/Vanilla-weather-app"
             target="_blank"
             >Open-source code</a
-          >, by Nika Leva
+          > by Nika Leva
         </small>
-      </div>
+     
       <script src="src/app.js"></script>
     </div>
   </body>
